# NEAR_programing

./: readme
Finding_Macro/: .gitignore  Near_Pipelines  near.sh  package.json
Finding_Macro/contracts/market/: Cargo.toml  build.sh
Finding_Macro/contracts/market/src/: external.rs  lib.rs  market_interface.rs  nft.rs  nft_interface.rs
Finding_Macro/contracts/nft/: Cargo.toml
Finding_Macro/contracts/nft/src/: lib.rs
Smart_Contract_Test/: Cargo.toml  build.sh
Smart_Contract_Test/src/: lib.rs
