[package]
name = "market"
version = "0.1.1"
authors = ["Mineloop HuynhHung <@huynhhung171099>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
 
[dependencies]
serde = "1.0.60"
serde_derive = "1.0.60"
near-sdk = "3.1.0"
near-contract-standards = "3.1.1"
nft = { git = "https://github.com/mineloop99/NEAR_programing/tree/master/Finding_Macro/contracts/nft" }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true 
